--- a/public/index.html
+++ b/public/index.html
@@ -30,6 +30,11 @@
     <script src="https://accounts.google.com/gsi/client" async defer></script>
 
     <script>
+
+        var url = (window.location.hostname.includes('localhost'))
+            ? 'http://localhost:8080/api/auth/google'
+            : 'https://restserver-node-jonathan.herokuapp.com/api/auth/google'
+
         function handleCredentialResponse(response) {
           
         /* no funciona con arrow function  */
@@ -38,7 +43,7 @@
         
         const body = {id_token: response.credential}
 
-        fetch('http://localhost:8080/api/auth/google', {
+        fetch(url, {
             method: 'POST',
             headers: {
                 'Content-Type': 'application/json'
@@ -49,6 +54,7 @@
             .then(resp => {
                 console.log(resp);
                 localStorage.setItem('email', resp.usuario.correo)
+                location.reload();
             })
             .catch(console.warn) 
         }
@@ -56,7 +62,7 @@
         /* Sign out de google */
         const button = document.getElementById('google_signout');
         button.onclick = () => {
-            console.log(google.accounts.id);
+            // console.log(google.accounts.id);
             google.accounts.id.disableAutoSelect();
             google.accounts.id.revoke(localStorage.getItem('email'), done => {
                 localStorage.clear();
