--- a/public/index.html
+++ b/public/index.html
@@ -5,27 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Google Sign-in</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
-<body>
-    <h1>Google Sign-in</h1>
-    <hr>
-    <div id="g_id_onload"
-         data-client_id="563530330908-9hjm7lb59cckbr5pvbiejshhjkl6meal.apps.googleusercontent.com"
-         data-auto_prompt="false"
-         data-callback="handleCredentialResponse">
-      </div>
-      <div class="g_id_signin"
-         data-type="standard"
-         data-size="large"
-         data-theme="outline"
-         data-text="sign_in_with"
-         data-shape="rectangular"
-         data-logo_alignment="left">
-      </div>
+<body class="container">
 
-      <button id="google_signout">
-          Signout
-      </button>
+    <div class="row mt-5">
+        <div class="col-sm-6">
+            <h1>Google Sign-in</h1>
+            <hr>
+            <div id="g_id_onload"
+                 data-client_id="563530330908-9hjm7lb59cckbr5pvbiejshhjkl6meal.apps.googleusercontent.com"
+                 data-auto_prompt="false"
+                 data-callback="handleCredentialResponse">
+              </div>
+              <div class="g_id_signin"
+                 data-type="standard"
+                 data-size="large"
+                 data-theme="outline"
+                 data-text="sign_in_with"
+                 data-shape="rectangular"
+                 data-logo_alignment="left">
+              </div>
+              <div class="mt-2">
+                  <button class="btn-primary" id="google_signout">
+                      Signout
+                  </button>
+              </div>
+        </div>
+        <div class="col-sm-6">
+
+        </div>
+    </div>
 
     <script src="https://accounts.google.com/gsi/client" async defer></script>
 
